# EnrichYourData

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
api/: Dockerfile
api/app/: main.py  pyproject.toml
api/app/visualization/: bokeh_handler.py
nginx/: Dockerfile  fullchain.pem  nginx.conf  privkey.pem
server/: Dockerfile
server/app/: main.py  pyproject.toml
server/app/db/: db_handler.py
services/api/: Dockerfile
services/api/app/: main.py  pyproject.toml
services/api/app/db/: db_handler.py
services/api/app/static/: tweet_style.css
services/api/app/static/css/: tweet_style.css  tweet_style.css.map
services/api/app/static/scss/: tweet_style.scss
services/api/app/templates/: form.html  item.html  login.html  tweet.html
services/api/app/utils/: create_user.py
services/dataprocessing/: Dockerfile  news_post_process.py
services/dataprocessing/core_modules/news_analyzer/: news_analyzer.py
services/db/initdb.d/: create-app-user.sh  
services/traefik/: traefik.dev.toml  traefik.prod.toml
