[tool.black]
line-length = 95
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry]
name = "EnrichYourData"
version = "0.0.1"
description = ""
authors = ["Silvio Pavanetto <silvio.pavanetto@polimi.it>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
nbformat = "^5.0.6"
pymongo = "^3.10.1"
PyYAML = "^5.3.1"
requests = "^2.23.0"
toml = "^0.10.1"
urllib3 = "^1.25.8"
virtualenv = "^20.0.21"
dateparser = "^0.7.5"